[gd_scene load_steps=90 format=3 uid="uid://kmwces4tj1hh"]

[ext_resource type="Script" path="res://skriptit/pelaaja.gd" id="1_ypfv3"]
[ext_resource type="Texture2D" uid="uid://dqym5n3qft82r" path="res://grafiikka/PlayerIdle.PNG" id="2_66tpr"]
[ext_resource type="Texture2D" uid="uid://bshv5yglnr7ru" path="res://grafiikka/Valo128.png" id="2_gc81g"]
[ext_resource type="Texture2D" uid="uid://cv31tvgdwxnjy" path="res://grafiikka/PelaajaHuilu-Sheet.png" id="3_6n26n"]
[ext_resource type="Texture2D" uid="uid://b6tbps0j5gs0v" path="res://grafiikka/PelaajaKavely.png" id="3_dwx8p"]
[ext_resource type="Texture2D" uid="uid://bnq2w54rhw78d" path="res://grafiikka/PelaajaHyppy-Sheet.png" id="3_li6jh"]
[ext_resource type="PackedScene" uid="uid://3dn0yrwcrv8w" path="res://scenet/valon_tarkistus.tscn" id="4_5hfdk"]
[ext_resource type="Material" uid="uid://bpi6nb20iy07w" path="res://tres-tiedostot/unshaded.tres" id="5_gdn2h"]
[ext_resource type="Texture2D" uid="uid://unl4x51gimxg" path="res://grafiikka/Tahtain.png" id="6_eyyqa"]
[ext_resource type="Texture2D" uid="uid://d1oyqkmwe7p1i" path="res://grafiikka/OhjainTooltipSelect.png" id="6_uircd"]
[ext_resource type="Texture2D" uid="uid://csjbkgti5474u" path="res://grafiikka/PelaajaKuolema-Sheet.png" id="7_dc5pa"]
[ext_resource type="Texture2D" uid="uid://dgpptf7h5t4y5" path="res://grafiikka/WallClimb-Sheet.png" id="7_prghi"]
[ext_resource type="AudioStream" uid="uid://eqsig3hl534a" path="res://audio/pelaaja/kavely2_pitka_mono.wav" id="10_uhji0"]
[ext_resource type="AudioStream" uid="uid://37o042m8fj2j" path="res://audio/pelaaja/juoksu_mono.wav" id="11_kteua"]
[ext_resource type="Texture2D" uid="uid://dn4q2iyjfh52y" path="res://grafiikka/LightBall2.png" id="11_p47gp"]
[ext_resource type="AudioStream" uid="uid://es1b0j0djyua" path="res://audio/pelaaja/hyppy1_mono.wav" id="12_k2yxh"]
[ext_resource type="AudioStream" uid="uid://ntnhr3lolj61" path="res://audio/pelaaja/hyppy2_mono.wav" id="13_rny7p"]
[ext_resource type="AudioStream" uid="uid://b3cxujqnjndpd" path="res://audio/pelaaja/hyppy3_mono.wav" id="14_yxy1y"]
[ext_resource type="AudioStream" uid="uid://bjbaqnxkgke0l" path="res://audio/pelaaja/walljump1_mono.wav" id="15_bxt80"]
[ext_resource type="AudioStream" uid="uid://kt21kkg6uvsh" path="res://audio/pelaaja/pelaaja_kuolee_mono.wav" id="16_4n4el"]
[ext_resource type="Texture2D" uid="uid://dj3c6nkmnxha2" path="res://grafiikka/Valo256.png" id="20_8tpmo"]
[ext_resource type="AudioStream" uid="uid://xbwdpjb83uco" path="res://audio/pelaaja/falldamage.mp3" id="20_l0cg5"]
[ext_resource type="AudioStream" uid="uid://dmtg34jhamrpm" path="res://audio/pelaaja/tomahdys.mp3" id="20_o55xv"]
[ext_resource type="Texture2D" uid="uid://cbatwxsibovo" path="res://grafiikka/AanenTaajuus1.png" id="22_7od7w"]
[ext_resource type="Texture2D" uid="uid://bh2dveepeu0so" path="res://grafiikka/Nuotti.png" id="22_fot2n"]
[ext_resource type="Texture2D" uid="uid://cg7a67mf311xj" path="res://grafiikka/AanenTaajuus2.png" id="23_ai0kk"]
[ext_resource type="AudioStream" uid="uid://pywxdhvql574" path="res://audio/pelaaja/huilu/huiluaani_A.wav" id="23_elvmw"]
[ext_resource type="Texture2D" uid="uid://cp4f2v1euxr6b" path="res://grafiikka/AanenTaajuus3.png" id="24_7n80x"]
[ext_resource type="AudioStream" uid="uid://dw75jyosgto66" path="res://audio/pelaaja/huilu/huiluaani_C.wav" id="24_xxdxr"]
[ext_resource type="AudioStream" uid="uid://cp6dkr6x4wbqa" path="res://audio/ambient/tuulen_humina.mp3" id="25_byydo"]
[ext_resource type="AudioStream" uid="uid://diri4jc7100fi" path="res://audio/pelaaja/huilu/huiluaani_E.wav" id="25_qars5"]
[ext_resource type="Script" path="res://skriptit/huilu.gd" id="26_v60w7"]
[ext_resource type="AudioStream" uid="uid://dtosbgc61phfu" path="res://audio/valopallo/valopallo_poimitaan_mono.mp3" id="28_p78nr"]
[ext_resource type="AudioStream" uid="uid://7tjeefooail4" path="res://audio/pelaaja/creeping_darkness_2.mp3" id="32_1qpma"]
[ext_resource type="Texture2D" uid="uid://cc0ruxmm0fvpm" path="res://grafiikka/HealthbarEmpty.png" id="34_tun23"]
[ext_resource type="Texture2D" uid="uid://c4xxipuqjmcay" path="res://grafiikka/HealthbarOutline.png" id="35_m6how"]
[ext_resource type="Texture2D" uid="uid://bwl0e7t423lay" path="res://grafiikka/HealthbarFull.png" id="35_x5jxm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u7j51"]
radius = 3.83333
height = 10.6667

[sub_resource type="Gradient" id="Gradient_l5lx0"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lbg0v"]
gradient = SubResource("Gradient_l5lx0")

[sub_resource type="AtlasTexture" id="AtlasTexture_tek73"]
atlas = ExtResource("3_6n26n")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3kr3"]
atlas = ExtResource("3_6n26n")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwete"]
atlas = ExtResource("3_6n26n")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyyhe"]
atlas = ExtResource("3_6n26n")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rol5d"]
atlas = ExtResource("3_6n26n")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u6dx"]
atlas = ExtResource("3_6n26n")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cje60"]
atlas = ExtResource("3_6n26n")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_en24p"]
atlas = ExtResource("3_6n26n")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oymm"]
atlas = ExtResource("3_6n26n")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf3nc"]
atlas = ExtResource("3_6n26n")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5werk"]
atlas = ExtResource("3_6n26n")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2tgj"]
atlas = ExtResource("3_6n26n")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1c8r"]
atlas = ExtResource("3_li6jh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo8gg"]
atlas = ExtResource("3_li6jh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvkv5"]
atlas = ExtResource("2_66tpr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbjjl"]
atlas = ExtResource("2_66tpr")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwoba"]
atlas = ExtResource("3_dwx8p")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2v01"]
atlas = ExtResource("3_dwx8p")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2sj5"]
atlas = ExtResource("3_dwx8p")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfsq3"]
atlas = ExtResource("3_dwx8p")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0tta"]
atlas = ExtResource("3_dwx8p")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcf0f"]
atlas = ExtResource("3_dwx8p")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmk3c"]
atlas = ExtResource("3_dwx8p")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q7pi"]
atlas = ExtResource("3_dwx8p")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v0iw"]
atlas = ExtResource("7_prghi")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pt27y"]
atlas = ExtResource("7_prghi")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hts1f"]
atlas = ExtResource("7_prghi")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fml5"]
atlas = ExtResource("7_prghi")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bqvgf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tek73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3kr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwete")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyyhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rol5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u6dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cje60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en24p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oymm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf3nc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5werk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2tgj")
}],
"loop": true,
"name": &"huilu",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1c8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo8gg")
}],
"loop": true,
"name": &"hyppy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvkv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbjjl")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwoba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2v01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2sj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfsq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0tta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcf0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmk3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q7pi")
}],
"loop": true,
"name": &"kavely",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v0iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt27y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hts1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fml5")
}],
"loop": true,
"name": &"seinakiipeaminen",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_k5jn7"]
atlas = ExtResource("7_dc5pa")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkpoq"]
atlas = ExtResource("7_dc5pa")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8bsr"]
atlas = ExtResource("7_dc5pa")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t07e0"]
atlas = ExtResource("7_dc5pa")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4jip"]
atlas = ExtResource("7_dc5pa")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxkwx"]
atlas = ExtResource("7_dc5pa")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvl83"]
atlas = ExtResource("7_dc5pa")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrtgv"]
atlas = ExtResource("7_dc5pa")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmpwk"]
atlas = ExtResource("7_dc5pa")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdo70"]
atlas = ExtResource("7_dc5pa")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndxgu"]
atlas = ExtResource("7_dc5pa")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_upx0d"]
atlas = ExtResource("7_dc5pa")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsa8i"]
atlas = ExtResource("7_dc5pa")
region = Rect2(768, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bkpot"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5jn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkpoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8bsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t07e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4jip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxkwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvl83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrtgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmpwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdo70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndxgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upx0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsa8i")
}],
"loop": true,
"name": &"kuolema",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qv5js"]
radius = 24.0208

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_e1hap"]
blend_mode = 1
light_mode = 1

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wrish"]
streams_count = 3
stream_0/stream = ExtResource("12_k2yxh")
stream_0/weight = 1.0
stream_1/stream = ExtResource("13_rny7p")
stream_1/weight = 1.0
stream_2/stream = ExtResource("14_yxy1y")
stream_2/weight = 1.0

[sub_resource type="Gradient" id="Gradient_d4qav"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3yd8i"]
gradient = SubResource("Gradient_d4qav")

[sub_resource type="SpriteFrames" id="SpriteFrames_ln8w0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_7od7w")
}, {
"duration": 1.0,
"texture": ExtResource("23_ai0kk")
}, {
"duration": 1.0,
"texture": ExtResource("24_7n80x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Pelaaja" type="CharacterBody2D" groups=["Pelaaja"]]
collision_layer = 2
script = ExtResource("1_ypfv3")

[node name="keho" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="keho" groups=["Pelaaja"]]
position = Vector2(3, -1)
scale = Vector2(6, 6)
shape = SubResource("CapsuleShape2D_u7j51")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Pelaaja"]]
position = Vector2(3, -1)
scale = Vector2(6, 6)
shape = SubResource("CapsuleShape2D_u7j51")

[node name="PimeaValo" type="PointLight2D" parent="."]
visible = false
position = Vector2(-17.5059, -41.9961)
scale = Vector2(2188.64, 1311.03)
blend_mode = 1
texture = SubResource("GradientTexture2D_lbg0v")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.933333, 0.854902, 0.564706, 1)
energy = 0.4
blend_mode = 2
shadow_enabled = true
texture = ExtResource("2_gc81g")

[node name="Animaatio" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(2, -4)
sprite_frames = SubResource("SpriteFrames_bqvgf")
animation = &"huilu"

[node name="PauseAnimaatiot" type="AnimatedSprite2D" parent="."]
process_mode = 2
position = Vector2(2, -4)
sprite_frames = SubResource("SpriteFrames_bkpot")
animation = &"kuolema"
frame_progress = 0.264938

[node name="ValonTarkistus" parent="." instance=ExtResource("4_5hfdk")]
collision_mask = 30

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ValonTarkistus"]
position = Vector2(-9.67458e-06, 7.62939e-06)
shape = SubResource("CircleShape2D_qv5js")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 999
material = SubResource("CanvasItemMaterial_e1hap")

[node name="Tahtain" type="Sprite2D" parent="."]
light_mask = 512
visibility_layer = 512
z_index = 4096
z_as_relative = false
texture_filter = 1
texture = ExtResource("6_eyyqa")

[node name="Tahtain2" type="Sprite2D" parent="Tahtain"]
light_mask = 512
visibility_layer = 512
z_index = 4096
z_as_relative = false
texture_filter = 1
texture = ExtResource("6_eyyqa")

[node name="Tahtain3" type="Sprite2D" parent="Tahtain"]
light_mask = 512
visibility_layer = 512
z_index = 4096
z_as_relative = false
texture_filter = 1
texture = ExtResource("6_eyyqa")

[node name="Tahtain4" type="Sprite2D" parent="Tahtain"]
light_mask = 512
visibility_layer = 512
z_index = 4096
z_as_relative = false
texture_filter = 1
texture = ExtResource("6_eyyqa")

[node name="AudioKavely" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_uhji0")
pitch_scale = 1.1
bus = &"Pelaaja"

[node name="AudioJuoksu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_kteua")
bus = &"Pelaaja"

[node name="AudioHyppy" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_wrish")
bus = &"Pelaaja"

[node name="AudioSeinahyppy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_bxt80")
volume_db = 4.278
bus = &"Pelaaja"

[node name="AudioPelaajaKuoleeViholliselle" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("16_4n4el")
volume_db = 7.0
bus = &"Vihollinen"

[node name="AudioPelaajaTomahdys" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("20_o55xv")
volume_db = 7.0
bus = &"Pelaaja"

[node name="AudioPelaajaFallDamageKuolema" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("20_l0cg5")
volume_db = 9.962
bus = &"Pelaaja"

[node name="AudioAmbient" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("25_byydo")
volume_db = 12.506

[node name="HuiluAaniA" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_elvmw")

[node name="HuiluAaniC" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_xxdxr")

[node name="HuiluAaniE" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("25_qars5")

[node name="AudioValopallonKeraaminen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("28_p78nr")
volume_db = 16.0
bus = &"Pelaaja"

[node name="AudioPimeyskuolema" type="AudioStreamPlayer" parent="."]
stream = ExtResource("32_1qpma")
volume_db = 3.0
bus = &"Musiikki"

[node name="AudioPelaajaFallDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_l0cg5")
volume_db = 20.0

[node name="ReunojenPimentajaValo" type="PointLight2D" parent="."]
visible = false
light_mask = 0
visibility_layer = 0
position = Vector2(-1, -4)
scale = Vector2(133.326, 77.3468)
blend_mode = 1
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_3yd8i")
texture_scale = 15.22

[node name="ReunaValo" type="PointLight2D" parent="."]
light_mask = 0
visibility_layer = 0
blend_mode = 2
range_item_cull_mask = 2
texture = ExtResource("20_8tpmo")

[node name="Huilu" type="Area2D" parent="."]
collision_layer = 14
script = ExtResource("26_v60w7")

[node name="Partikkelit" type="CPUParticles2D" parent="Huilu"]
z_index = 99
texture_filter = 1
material = ExtResource("5_gdn2h")
position = Vector2(37, 0)
emitting = false
amount = 5
texture = ExtResource("22_fot2n")
emission_shape = 1
emission_sphere_radius = 9.66
spread = 9.73
gravity = Vector2(70, 0)
initial_velocity_min = 90.23
initial_velocity_max = 157.89
radial_accel_max = 91.73
tangential_accel_min = -10.0
tangential_accel_max = 10.0
damping_max = 9.474

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Huilu"]
visible = false
scale = Vector2(0.943093, 0.84285)
polygon = PackedVector2Array(-40, -1, -26, -28, 23, -58, 360, -150, 430, -110, 473, 0, 430, 110, 360, 150, 23, 58, -26, 27)

[node name="RayCast2D" type="RayCast2D" parent="Huilu"]

[node name="CooldownAjastin" type="Timer" parent="Huilu"]
wait_time = 2.0
one_shot = true

[node name="Ajastin" type="Timer" parent="Huilu"]
one_shot = true

[node name="AanenTaajuus" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 99
material = ExtResource("5_gdn2h")
position = Vector2(0, -64)
sprite_frames = SubResource("SpriteFrames_ln8w0")

[node name="Ajastin" type="Timer" parent="AanenTaajuus"]
wait_time = 0.73

[node name="AjastinPimealle" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="AjastinPimealleAudio" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Palloja" type="TextureRect" parent="HUD"]
z_index = 99
material = ExtResource("5_gdn2h")
layout_mode = 0
offset_left = -496.0
offset_top = -273.0
offset_right = -388.0
offset_bottom = -165.0
texture = ExtResource("11_p47gp")

[node name="ElamaMittariKuvalla" type="TextureProgressBar" parent="HUD"]
z_index = 99
material = ExtResource("5_gdn2h")
layout_mode = 0
offset_left = -386.0
offset_top = -244.0
offset_right = -346.0
offset_bottom = -204.0
scale = Vector2(4.94934, 0.80468)
max_value = 5.0
step = 0.0
value = 5.0
nine_patch_stretch = true
texture_under = ExtResource("34_tun23")
texture_over = ExtResource("35_m6how")
texture_progress = ExtResource("35_x5jxm")

[node name="ApuaLabel" type="Label" parent="HUD"]
z_index = 99
texture_filter = 1
material = ExtResource("5_gdn2h")
layout_mode = 0
offset_left = 280.0
offset_top = -259.0
offset_right = 436.0
offset_bottom = -236.0
text = "Journal: J / "

[node name="Sprite2D" type="Sprite2D" parent="HUD/ApuaLabel"]
texture_filter = 1
material = ExtResource("5_gdn2h")
position = Vector2(168, 12)
texture = ExtResource("6_uircd")

[node name="JournalInfo" type="Label" parent="."]
z_index = 100
material = ExtResource("5_gdn2h")
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = 196.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0
text = "It's too dark to read the journal"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="keho" to="." method="_on_keho_body_entered"]
[connection signal="siirrytty_valoon" from="ValonTarkistus" to="." method="siirrytty_valoon"]
[connection signal="siirrytty_varjoon" from="ValonTarkistus" to="." method="siirrytty_varjoon"]
[connection signal="body_entered" from="Huilu" to="." method="_on_huilu_body_entered"]
[connection signal="timeout" from="AjastinPimealle" to="." method="kuolema"]
[connection signal="timeout" from="AjastinPimealleAudio" to="." method="pimeaKuoleminen"]
